Add readme file

--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09034bc9",
+   "id": "b9554b11",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -177,6 +177,18 @@
    "source": [
     "An *iterator* can be created by an iterable using `iter()`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64c66686",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
