--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -12,7 +12,7 @@
     "# Switch loops with iterTools\n",
     "\n",
     "\n",
-    "By Sebastian Arias T."
+    "By Sebastian Arias T.\n"
    ]
   },
   {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "9a6d1f33",
    "metadata": {
     "cell_style": "split",
@@ -441,7 +441,17 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O\n",
+      "b\n",
+      "i\n"
+     ]
+    }
+   ],
    "source": [
     "def my_chain(*iterables):\n",
     "    for iterable in iterables:\n",
@@ -458,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "d25806ff",
    "metadata": {
     "cell_style": "split",
@@ -466,7 +476,20 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O\n",
+      "b\n",
+      "i\n",
+      "W\n",
+      "a\n",
+      "n\n"
+     ]
+    }
+   ],
    "source": [
     "from itertools import chain\n",
     "\n",
@@ -496,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "f712bbd3",
    "metadata": {
     "cell_style": "split",
@@ -504,7 +527,17 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O\n",
+      "b\n",
+      "i\n"
+     ]
+    }
+   ],
    "source": [
     "from itertools import chain\n",
     "\n",
@@ -531,14 +564,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "093e901a",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grievous\n",
+      "Doku\n"
+     ]
+    }
+   ],
    "source": [
     "from itertools import compress\n",
     "\n",
@@ -568,14 +610,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "e8d5798d",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "from itertools import filterfalse\n",
     "\n",
@@ -738,19 +791,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "a7857265",
    "metadata": {
-    "cell_style": "center",
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Option1', 'Option2', 'Option3', 'SubOption1', 'SubOption2', 'SubOption3']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.014378750000105356"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import timeit\n",
     "\n",
-    "data_list = [[\"Option1\", \"Option2\", \"Option3\"], [\"SubOption1\", \"SubOption2\", \"SubOption3\"]]\n",
+    "data_list = [\n",
+    "    [\"Option1\", \"Option2\", \"Option3\"], \n",
+    "    [\"SubOption1\", \"SubOption2\", \"SubOption3\"]\n",
+    "]\n",
     "\n",
     "def flatten_list():\n",
     "    flat_list = list()\n",
@@ -767,20 +841,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "f40f87f4",
    "metadata": {
-    "cell_style": "center",
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Option1', 'Option2', 'Option3', 'SubOption1', 'SubOption2', 'SubOption3']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.011542625001311535"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import timeit\n",
     "\n",
     "def flatten_list_comp():\n",
-    "    return [item for elem in data_list for item in elem]\n",
+    "    return [\n",
+    "        item for elem in data_list \n",
+    "        for item in elem\n",
+    "    ]\n",
     "\n",
     "\n",
     "print(flatten_list_comp())\n",
@@ -791,15 +886,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "d68a8d45",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Option1', 'Option2', 'Option3'], ['SubOption1', 'SubOption2', 'SubOption3']]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.007578415999887511"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from itertools import chain\n",
     "\n",
@@ -826,14 +939,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "5bd3a039",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 34, 63, 190]\n",
+      "299\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.015379958998892107"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert String to number\n",
     "string_list = ['12', '34', '63', '190']\n",
@@ -853,14 +986,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "cec309b8",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "299\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.017880916999274632"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def cast_string_to_number_comp() -> list:\n",
     "    return [int(item) for item in string_list]\n",
@@ -872,18 +1024,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "90a384e7",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "299\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.007473375000699889"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from itertools import chain\n",
     "\n",
-    "def cast_string_to_number_it() -> :\n",
+    "def cast_string_to_number_it():\n",
     "    return map(int, chain(string_list))\n",
     "\n",
     "print(sum(cast_string_to_number_it()))\n",
@@ -905,9 +1075,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 112,
    "id": "e154bd28",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -923,16 +1094,21 @@
     {
      "data": {
       "text/plain": [
-       "0.0011819169994851109"
+       "0.001532457999928738"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "car_models = [\"Nissan GTR\", \"Tesla Model Y\", \"AMG EQE53\", \"Toyota Supra\"]\n",
+    "car_models = [\n",
+    "    \"Nissan GTR\", \n",
+    "    \"Tesla Model Y\", \n",
+    "    \"AMG EQE53\", \n",
+    "    \"Toyota Supra\"\n",
+    "]\n",
     "electric_cars_selector = [0, 1, 1, 0]\n",
     "\n",
     "def get_electric_car_models():\n",
@@ -950,9 +1126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 111,
    "id": "3a38c3a8",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -968,17 +1145,20 @@
     {
      "data": {
       "text/plain": [
-       "0.001856416999544308"
+       "0.002179915998567594"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def get_electric_car_models_comp():\n",
-    "    return [car for idx, car in enumerate(car_models) if electric_cars_selector[idx]]\n",
+    "    return [car \n",
+    "            for idx, car in enumerate(car_models) \n",
+    "            if electric_cars_selector[idx]\n",
+    "           ]\n",
     "\n",
     "print(get_electric_car_models_comp())\n",
     "timeit.Timer(get_electric_car_models_comp).timeit(number=1000)        "
@@ -990,7 +1170,7 @@
    "id": "a1548767",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -1026,35 +1206,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 114,
    "id": "4b6beb96",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'brand': 'Nissan', 'model': 'GTR', 'is_electric': False}, {'brand': 'Toyota', 'model': 'Supra', 'is_electric': False}]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0014309999996839906"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import timeit\n",
-    "\n",
     "cars_list = [\n",
     "    {\n",
     "        'brand': 'Nissan',\n",
@@ -1076,7 +1236,39 @@
     "        'model': 'AMG EQE53',\n",
     "        'is_electric': True,\n",
     "    }\n",
-    "]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "1a7c4fec",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'brand': 'Nissan', 'model': 'GTR', 'is_electric': False}, {'brand': 'Toyota', 'model': 'Supra', 'is_electric': False}]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0014815829999861307"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import timeit\n",
     "\n",
     "def get_non_electric_cars():\n",
     "    non_electric_cars = list()\n",
@@ -1145,9 +1337,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "be4c4b22",
-   "metadata": {},
+   "execution_count": 121,
+   "id": "b2f3d639",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "import timeit\n",
@@ -1155,10 +1351,6 @@
     "pets_list = [\n",
     "    {\n",
     "        \"name\": \"Rocky\",\n",
-    "        \"breed\": \"Akita\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"Charlie\",\n",
     "        \"breed\": \"Akita\"\n",
     "    },\n",
     "    {\n",
@@ -1170,16 +1362,8 @@
     "        \"breed\": \"German Sheepard\"\n",
     "    },\n",
     "    {\n",
-    "        \"name\": \"Stella\",\n",
-    "        \"breed\": \"German Sheepard\"\n",
-    "    },\n",
-    "    {\n",
     "        \"name\": \"Lola\",\n",
     "        \"breed\": \"German Sheepard\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"Lucy\",\n",
-    "        \"breed\": \"Golden Retriever\"\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"Duke\",\n",
@@ -1194,16 +1378,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "c417c9ed",
-   "metadata": {},
+   "execution_count": 122,
+   "id": "6a3c254e",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0033033339996109135\n",
-      "[{'name': 'Legend', 'breed': 'German Sheepard'}, {'name': 'Stella', 'breed': 'German Sheepard'}, {'name': 'Lola', 'breed': 'German Sheepard'}]\n"
+      "0.0028739579993271036\n",
+      "[{'name': 'Legend', 'breed': 'German Sheepard'}, {'name': 'Lola', 'breed': 'German Sheepard'}]\n"
      ]
     }
    ],
@@ -1217,7 +1406,9 @@
     "            result_pets.append(pet)\n",
     "    return result_pets\n",
     "\n",
-    "t = timeit.Timer(lambda: group_by_breed(pets_list, \"German Sheepard\")) \n",
+    "t = timeit.Timer(\n",
+    "    lambda: group_by_breed(pets_list, \"German Sheepard\")\n",
+    ") \n",
     "print(t.timeit(number=1000))\n",
     "\n",
     "print(group_by_breed(pets_list, \"German Sheepard\"))"
@@ -1225,11 +1416,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 123,
    "id": "5c72a420",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -1237,18 +1429,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Akita': [{'name': 'Rocky', 'breed': 'Akita'}, {'name': 'Charlie', 'breed': 'Akita'}, {'name': 'Loki', 'breed': 'Akita'}], 'German Sheepard': [{'name': 'Legend', 'breed': 'German Sheepard'}, {'name': 'Stella', 'breed': 'German Sheepard'}, {'name': 'Lola', 'breed': 'German Sheepard'}], 'Golden Retriever': [{'name': 'Lucy', 'breed': 'Golden Retriever'}, {'name': 'Duke', 'breed': 'Golden Retriever'}, {'name': 'Tucker', 'breed': 'Golden Retriever'}]}\n",
+      "{'Akita': [{'name': 'Rocky', 'breed': 'Akita'}, {'name': 'Loki', 'breed': 'Akita'}], 'German Sheepard': [{'name': 'Legend', 'breed': 'German Sheepard'}, {'name': 'Lola', 'breed': 'German Sheepard'}], 'Golden Retriever': [{'name': 'Duke', 'breed': 'Golden Retriever'}, {'name': 'Tucker', 'breed': 'Golden Retriever'}]}\n",
       "---- German Sheepard ----\n",
-      "[{'name': 'Legend', 'breed': 'German Sheepard'}, {'name': 'Stella', 'breed': 'German Sheepard'}, {'name': 'Lola', 'breed': 'German Sheepard'}]\n"
+      "[{'name': 'Legend', 'breed': 'German Sheepard'}, {'name': 'Lola', 'breed': 'German Sheepard'}]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.0006422079995900276"
+       "0.0008665829991514329"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,9 +1451,15 @@
     "from collections.abc import Iterator\n",
     "\n",
     "def group_by_type_it() -> Iterator:\n",
-    "    return groupby(pets_list, lambda pet: pet[\"breed\"])\n",
+    "    return groupby(\n",
+    "        pets_list, \n",
+    "        lambda pet: pet[\"breed\"]\n",
+    "    )\n",
     "\n",
-    "grouped_pets_by_breeds = {key: list(values) for key, values in group_by_type_it()}\n",
+    "grouped_pets_by_breeds = {\n",
+    "    key: list(values) \n",
+    "    for key, values in group_by_type_it()\n",
+    "}\n",
     "\n",
     "print(grouped_pets_by_breeds)\n",
     "\n",
@@ -1275,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "068da414",
+   "id": "2ba1d617",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1288,8 +1486,13 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "bb16d0e3",
-   "metadata": {},
+   "id": "8fba2915",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1342,8 +1545,13 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "16d4d72d",
-   "metadata": {},
+   "id": "c7014b2e",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1422,7 +1630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae9b5766",
+   "id": "0cb434b5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1434,7 +1642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69ceb3d1",
+   "id": "087352d0",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1446,7 +1654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0c9270f",
+   "id": "45b5e422",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1458,7 +1666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c40b1e55",
+   "id": "d06b279a",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1470,7 +1678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd3067cb",
+   "id": "3fcbb0a3",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1482,7 +1690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada305aa",
+   "id": "43baa191",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1494,7 +1702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6758244",
+   "id": "97acc6de",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1506,7 +1714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22ad6517",
+   "id": "fe3a25be",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1517,11 +1725,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f4b1796",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "2771cd70",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Questions? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5527c3de",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Thanks for your attention and keep coding! 👩‍💻👨‍💻🧑‍💻"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48acb1d7",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     " "
    ]
@@ -1545,6 +1779,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.3"
+  },
+  "rise": {
+   "header": "<img src='./media/SB_logo.svg'>"
   }
  },
  "nbformat": 4,
