--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -1780,6 +1780,9 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.3"
   },
+  "livereveal": {
+   "autolaunch": true
+  },
   "rise": {
    "autolaunch": true,
    "header": "<img src='./media/SB_logo.svg'>"
