Update footer style

--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -12,7 +12,8 @@
     "# Switch loops with iterTools\n",
     "\n",
     "\n",
-    "By Sebastian Arias T.\n"
+    "by:  Sebastian Arias T.\n",
+    "\n"
    ]
   },
   {
@@ -1341,7 +1342,7 @@
    "id": "b2f3d639",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -1383,7 +1384,7 @@
    "metadata": {
     "cell_style": "split",
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1785,7 +1786,7 @@
   },
   "rise": {
    "autolaunch": true,
-   "header": "<img src='./media/SB_logo.svg'>"
+   "footer": "<img style='margin-left:25%' src='./media/SB_logo.svg'>"
   }
  },
  "nbformat": 4,
