--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 125,
    "id": "6e61693f",
    "metadata": {
     "slideshow": {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 126,
    "id": "1fe6ef10",
    "metadata": {
     "slideshow": {
@@ -190,7 +190,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mjedis_iterable\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Input \u001b[0;32mIn [126]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mjedis_iterable\u001b[49m\u001b[43m)\u001b[49m)\n",
       "\u001b[0;31mTypeError\u001b[0m: 'list' object is not an iterator"
      ]
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "6a888fb2",
    "metadata": {
     "scrolled": true,
@@ -209,7 +209,15 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obi-Wan Kenobi\n"
+     ]
+    }
+   ],
    "source": [
     "jedis_iterator = iter(jedis_iterable)\n",
     "print(next(jedis_iterator))"
@@ -368,9 +376,9 @@
    "execution_count": 88,
    "id": "9a6d1f33",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -403,7 +411,7 @@
    "execution_count": 89,
    "id": "d25806ff",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -439,7 +447,7 @@
    "cell_type": "markdown",
    "id": "8e4dccc5",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -454,7 +462,7 @@
    "execution_count": 90,
    "id": "f712bbd3",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -593,7 +601,7 @@
    "execution_count": 7,
    "id": "e7b6f3b9",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -621,9 +629,9 @@
    "execution_count": 8,
    "id": "445f504d",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -723,10 +731,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 128,
    "id": "a7857265",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -742,10 +750,10 @@
     {
      "data": {
       "text/plain": [
-       "0.014378750000105356"
+       "0.012956832997588208"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,20 +773,19 @@
     "            flat_list.append(item)\n",
     "    return flat_list\n",
     "\n",
+    "\n",
     "print(flatten_list())\n",
-    "\n",
-    "\n",
     "timeit.Timer(flatten_list).timeit(number=10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 129,
    "id": "f40f87f4",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -792,10 +799,10 @@
     {
      "data": {
       "text/plain": [
-       "0.011542625001311535"
+       "0.012962374999915482"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,19 +818,17 @@
     "\n",
     "\n",
     "print(flatten_list_comp())\n",
-    "\n",
-    "\n",
     "timeit.Timer(flatten_list_comp).timeit(number=10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 130,
    "id": "d68a8d45",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -837,10 +842,10 @@
     {
      "data": {
       "text/plain": [
-       "0.007578415999887511"
+       "0.008991541999421315"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,9 +856,8 @@
     "def flatten_list_it():\n",
     "    return list(chain(data_list))\n",
     "\n",
-    "\n",
+    " \n",
     "print(flatten_list_it())\n",
-    "\n",
     "timeit.Timer(flatten_list_it).timeit(number=10000)"
    ]
   },
@@ -874,7 +878,7 @@
    "execution_count": 106,
    "id": "5bd3a039",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -921,9 +925,9 @@
    "execution_count": 107,
    "id": "cec309b8",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -960,7 +964,7 @@
    "id": "90a384e7",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -1010,7 +1014,7 @@
    "execution_count": 112,
    "id": "e154bd28",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1061,9 +1065,9 @@
    "execution_count": 111,
    "id": "3a38c3a8",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -1102,7 +1106,7 @@
    "id": "a1548767",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -1221,7 +1225,7 @@
    "id": "94df5e01",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -1273,7 +1277,7 @@
    "id": "b2f3d639",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -1313,9 +1317,9 @@
    "execution_count": 122,
    "id": "6a3c254e",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -1351,9 +1355,9 @@
    "execution_count": 123,
    "id": "5c72a420",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -1417,10 +1421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 132,
    "id": "8fba2915",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1430,18 +1434,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.00482637499953853\n",
       "['APPL result: 140.0', 'TSLA result: 750.0', 'NDAQ result: -200.0']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.004543250000097032"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1470,8 +1465,8 @@
     "        results.append(f'{stock.stock} result: {gain_loss}')\n",
     "    return results\n",
     "\n",
-    "print(calculate_gain_loss())\n",
-    "timeit.Timer(calculate_gain_loss).timeit(1000)\n"
+    "print(timeit.Timer(calculate_gain_loss).timeit(1000))\n",
+    "print(calculate_gain_loss())"
    ]
   },
   {
@@ -1479,9 +1474,9 @@
    "execution_count": 86,
    "id": "c7014b2e",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -1515,7 +1510,7 @@
    "id": "b8a5f56b",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
