Add composition of itertools example

--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -1475,6 +1475,7 @@
    "id": "c7014b2e",
    "metadata": {
     "cell_style": "center",
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1503,6 +1504,68 @@
     "print(timeit.Timer(lambda: starmap(calculate_gain_loss_it, stocks_i)).timeit(number=1000))\n",
     "\n",
     "print(list(starmap(calculate_gain_loss_it, stocks_i)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a872c652",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Itertools Composition Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2c7e683b",
+   "metadata": {
+    "cell_style": "center",
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('APPL', 140.0), ('TSLA', 750.0)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "from itertools import starmap, compress, filterfalse\n",
+    "from typing import NamedTuple\n",
+    "\n",
+    "class Stocks(NamedTuple):\n",
+    "    stock: str\n",
+    "    buy_price: float\n",
+    "    shares: int\n",
+    "    current_price: float\n",
+    "\n",
+    "\n",
+    "stocks_i = [\n",
+    "    Stocks('APPL', 130.00, 2, 200.00),\n",
+    "    Stocks('TSLA', 400.00, 5, 550.00),\n",
+    "    Stocks('NDAQ', 150.00, 4, 100.00),\n",
+    "]\n",
+    "\n",
+    "def calculate_gain_loss_it(stock: str, buy_price: float, shares: int, current_price: float) -> str:\n",
+    "    buy_total = shares * buy_price\n",
+    "    current_total = shares * current_price\n",
+    "    gain_loss = current_total - buy_total\n",
+    "\n",
+    "    return (stock, gain_loss)\n",
+    "\n",
+    "list(filterfalse(lambda x: x[1] < 0, starmap(calculate_gain_loss_it, stocks_i)))"
    ]
   },
   {
@@ -1711,7 +1774,6 @@
    "autolaunch": true
   },
   "rise": {
-   "autolaunch": true,
    "footer": "<img style='margin-left:25%' src='./media/SB_logo.svg'>"
   }
  },
