--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "id": "a7857265",
    "metadata": {
     "cell_style": "center",
@@ -750,10 +750,10 @@
     {
      "data": {
       "text/plain": [
-       "0.012956832997588208"
+       "0.013384125000015956"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,10 +780,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 6,
    "id": "f40f87f4",
    "metadata": {
     "cell_style": "center",
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -799,10 +800,10 @@
     {
      "data": {
       "text/plain": [
-       "0.012962374999915482"
+       "0.011056000000053245"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "id": "d68a8d45",
    "metadata": {
     "cell_style": "center",
@@ -836,16 +837,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Option1', 'Option2', 'Option3'], ['SubOption1', 'SubOption2', 'SubOption3']]\n"
+      "['Option1', 'Option2', 'Option3', 'SubOption1', 'SubOption2', 'SubOption3']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.008991541999421315"
+       "0.008515750000015032"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +855,7 @@
     "from itertools import chain\n",
     "\n",
     "def flatten_list_it():\n",
-    "    return list(chain(data_list))\n",
+    "    return list(chain(*data_list))\n",
     "\n",
     " \n",
     "print(flatten_list_it())\n",
@@ -1475,7 +1476,7 @@
    "id": "c7014b2e",
    "metadata": {
     "cell_style": "center",
-    "scrolled": true,
+    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1559,7 +1560,7 @@
     "]\n",
     "\n",
     "def calculate_gain_loss_it(stock: str, buy_price: float, shares: int, current_price: float) -> str:\n",
-    "    buy_total = shares * buy_price\n",
+    "    buy_total = shares * buy_price \n",
     "    current_total = shares * current_price\n",
     "    gain_loss = current_total - buy_total\n",
     "\n",
