--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Switch loops with iterTools\n",
+    "# Switch Loops with Itertools\n",
     "\n",
     "\n",
     "by:  Sebastian Arias T.\n",
